# json2label

./: README.md  example.json  json2label.py  json_utils.py  pyproject.toml  requirements.txt
