[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "json2label"
version = "0.1.0"
authors = [
    {name = "Michal Bubula"},
    {name = "Staatsbibliothek zu Berlin - Preuﬂischer Kulturbesitz"},
]
description = "JSON to Label converter"
readme = "README.md"
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/michalbubula/json2label"
Repository = "https://github.com/michalbubula/json2label.git"

[project.scripts]
json2label = "json2label:main"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["."]